feat(backend): add config classes and custom exceptions
- Add AsyncConfig, CacheConfig, JacksonConfig for async and caching
- Add RateLimitingConfig, ResilienceConfig for rate limiting
- Add SecurityProperties for security configuration
- Add custom exceptions (ClusterProvisioningException, DockerOperationException, etc.)
- Add .env.example template